# talentpilot

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  responses.yaml.example  settings.yaml.example
dashboard/: index.html  server.py
src/talentpilot/: __init__.py  __main__.py  exceptions.py  models.py  orchestrator.py  settings.py
src/talentpilot/auth/: session_manager.py
src/talentpilot/browser/: base.py  playwright_adapter.py  stealth.py
src/talentpilot/discovery/: listing_scraper.py  query_builder.py
src/talentpilot/evaluation/: filter_chain.py
src/talentpilot/reporting/: console.py  data_export.py  tracker.py
src/talentpilot/submission/: field_filler.py  form_handler.py  resume_picker.py
tests/: conftest.py  test_filter_chain.py  test_orchestrator.py  test_query_builder.py  test_settings.py
